--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="./Assets/Css/Style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <div>Home</div>
+        <div>ABOUT US</div>
+        <div>PRODUCTS</div>
+        <div>SERVICE</div>
+        <div>CONTACT</div>
+    </header>
+    <main>
+        
+        <h1>MyHomeSpace</h1>
+        <img src="./img/slider1.jpg" alt="Photo de Salon" height="550">
+    </main>
+    <footer></footer>
 </body>
 </html>
