--- a/index.html
+++ b/index.html
@@ -15,10 +15,50 @@
         <div>CONTACT</div>
     </header>
     <main>
-        
-        <h1>MyHomeSpace</h1>
-        <img src="./img/slider1.jpg" alt="Photo de Salon" height="550">
+        <h1>My<span>Home</span>Space</h1>            
+        <img src="./img/slider1.jpg" alt="Photo de Salon" class="salon">
     </main>
-    <footer></footer>
+        <section class="sect-art">
+            <article class="art-article">
+                <h2>LAST WORKS</h2>
+                <img src="./img/pic1.jpg" alt="salon-2" class="">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita nam, nesciunt, possimus nostrum facilis quasi blanditiis sed ducimus corporis, dignissimos consequatur delectus inventore corrupti? Quasi distinctio laudantium veritatis tenetur eos.</p>
+            </article>
+            <article class="art-article">
+                <h2>PRODUCTS</h2>
+                <img src="./img/pic2.jpg" alt="canape">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur, ipsum? Neque in ipsum odio vel quos. Nam similique totam enim eaque, nesciunt necessitatibus labore dolores minima. Illo ab quo saepe!</p>
+            </article>
+            <article class="art-article">
+                <h2>SERVICE</h2>
+                <img src="./img/pic3.jpg" alt="chambre">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo tempora facere et omnis sit maiores nostrum sunt hic iste, molestiae pariatur unde recusandae ut. Dolorum inventore quasi architecto unde nisi?</p>
+            </article>
+        </section>
+        <section >
+            <article class="text">
+                <h3>Tesimonials</h3>
+                <ol>
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem vel numquam consequuntur autem laudantium, in quam at sit impedit odio tempore expedita maiores vero, eligendi sapiente nisi! Optio, necessitatibus accusantium.</li>
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem vel numquam consequuntur autem laudantium, in quam at sit impedit odio tempore expedita maiores vero, eligendi sapiente nisi! Optio, necessitatibus accusantium.</li>
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem vel numquam consequuntur autem laudantium, in quam at sit impedit odio tempore expedita maiores vero, eligendi sapiente nisi! Optio, necessitatibus accusantium.</li>
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem vel numquam consequuntur autem laudantium, in quam at sit impedit odio tempore expedita maiores vero, eligendi sapiente nisi! Optio, necessitatibus accusantium.</li>
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem vel numquam consequuntur autem laudantium, in quam at sit impedit odio tempore expedita maiores vero, eligendi sapiente nisi! Optio, necessitatibus accusantium.</li>                    
+                </ol>
+
+            </article>
+            <article>
+                <h3>Premium services</h3>
+
+            </article>
+
+
+        </section>
+    <footer>
+
+    </footer>
 </body>
+
 </html>
+
+
